force-app/main/default/objects/CPL_Batch_Result__c/CPL_Batch_Result__c.object-meta.xml
<CustomObject>
    <label>CPL Batch Result</label>
    <nameField>
        <displayFormat>CPLBR-{0000}</displayFormat>
        <label>CPL Batch Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPL Batch Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>