force-app/main/default/objects/CPL_Batch_Result__c/fields/Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Time__c</fullName>
    <label>Completion Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>