force-app/main/default/objects/CPL_Batch_Result__c/fields/Emails_Actually_Sent__c.field-meta.xml
<CustomField>
    <fullName>Emails_Actually_Sent__c</fullName>
    <label>Emails Actually Sent</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>