force-app/main/default/objects/CPL_Batch_Result__c/fields/Emails_With_Error__c.field-meta.xml
<CustomField>
    <fullName>Emails_With_Error__c</fullName>
    <label>Emails With Error</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>