force-app/main/default/objects/CPL_Batch_Result__c/fields/Exception_Before_Completion__c.field-meta.xml
<CustomField>
    <fullName>Exception_Before_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Before Completion</label>
    <type>Checkbox</type>
</CustomField>