force-app/main/default/objects/CPL_Batch_Result__c/fields/Exception_Text__c.field-meta.xml
<CustomField>
    <fullName>Exception_Text__c</fullName>
    <label>Exception Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>