force-app/main/default/objects/CPL_Batch_Result__c/fields/Total_Emails_to_be_Sent__c.field-meta.xml
<CustomField>
    <fullName>Total_Emails_to_be_Sent__c</fullName>
    <label>Total Emails to be Sent</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>